--- a/AdGroupDetails.html
+++ b/AdGroupDetails.html
@@ -1750,7 +1750,7 @@ document.addEventListener('DOMContentLoaded', function () {
   // Update the page title with ad group name
   const titleElement = document.getElementById('adGroupDetailsTitle');
   if (titleElement && adGroup.name) {
-    titleElement.innerHTML = `<span style="color: #0F66A7;">${adGroup.name}</span>: Ad Group Details`;
+    titleElement.innerHTML = `<span style="color: #0F66A7;">${adGroup.name}</span>: Ad Group Overview`;
   }
 
   // Populate breadcrumbs
