--- a/CampaignDetails.html
+++ b/CampaignDetails.html
@@ -1504,7 +1504,7 @@ window.addEventListener('DOMContentLoaded', () => {
   // Update the page title with campaign name
   const titleElement = document.getElementById('campaignDetailsTitle');
   if (titleElement && campaignName) {
-    titleElement.innerHTML = `<span style="color: #0F66A7;">${campaignName}</span>: Campaign Details`;
+    titleElement.innerHTML = `<span style="color: #0F66A7;">${campaignName}</span>: Campaign Overview`;
   }
 
   // Populate breadcrumbs
