--- a/Admin_User_Activity_Logs.html
+++ b/Admin_User_Activity_Logs.html
@@ -120,7 +120,8 @@
         <div class="nav-group">
         
           <a href="Admin_Users.html" class="nav-item"><i class="fas fa-users"></i><span>Users</span></a>
-          <a href="Admin_Roles_Permissions.html" class="nav-item"><i class="fas fa-user-tag"></i><span>Roles & Permissions</span></a>
+          <a href="Admin_Roles_Permissions.html" class="nav-item"><i class="fas fa-user-tag"></i><span>Roles</span></a>
+          <a href="Admin_Permissions.html" class="nav-item"><i class="fas fa-key"></i><span>Permissions</span></a>
           <a href="Admin_User_Activity_Logs.html" class="nav-item active"><i class="fas fa-history"></i><span>User Activity Logs</span></a>
           <a href="Admin_Configuration_Console.html" class="nav-item"><i class="fas fa-cogs"></i><span>Configuration Console</span></a>
         </div>
