--- a/AdvertiserAdGroup.html
+++ b/AdvertiserAdGroup.html
@@ -333,7 +333,7 @@
             </a>
           </li>
           <li>
-            <a href="./AdvertiserAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+            <a href="./AdvertiserAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm font-medium text-blue-700 bg-blue-50 rounded-md">
               <img src="./assets/svgs/AdGroups.svg" class="w-6 h-6 mr-2" alt="">
               <span data-link-label>Ad Groups</span>
             </a>
