synced vs not synced and edit modals on the connections pages

--- a/Admin_Configuration_Console.html
+++ b/Admin_Configuration_Console.html
@@ -325,7 +325,7 @@
                 <div class="content-card">
                     <div class="card-header">
                         <div>
-                            <div class="card-title">Industry Categories</div>
+                            <div class="card-title">Multiview Classification</div>
                             <div class="card-description">Manage available industry category options</div>
                         </div>
                         <button class="btn btn-primary btn-sm" onclick="openAddValueModal('Industry')"><i class="fas fa-plus"></i> Add Option</button>
@@ -335,7 +335,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Technology</span>
+                                    <span>Association Affinity</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Technology')"><i class="fas fa-edit"></i></button>
@@ -345,7 +345,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Retail</span>
+                                    <span>Audio</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Retail')"><i class="fas fa-edit"></i></button>
@@ -355,7 +355,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Healthcare</span>
+                                    <span>Display</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Healthcare')"><i class="fas fa-edit"></i></button>
@@ -365,7 +365,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Finance</span>
+                                    <span>Social</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Finance')"><i class="fas fa-edit"></i></button>
@@ -375,7 +375,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Automotive</span>
+                                    <span>Video</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Automotive')"><i class="fas fa-edit"></i></button>
@@ -389,7 +389,7 @@
                 <div class="content-card">
                     <div class="card-header">
                         <div>
-                            <div class="card-title">Campaign Status Options</div>
+                            <div class="card-title">Multiview Tactic</div>
                             <div class="card-description">Manage available campaign status values</div>
                         </div>
                         <button class="btn btn-primary btn-sm" onclick="openAddValueModal('Status')"><i class="fas fa-plus"></i> Add Option</button>
@@ -399,7 +399,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Active</span>
+                                    <span>Persona</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Active')"><i class="fas fa-edit"></i></button>
@@ -409,7 +409,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Paused</span>
+                                    <span>Keyword</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Paused')"><i class="fas fa-edit"></i></button>
@@ -419,7 +419,7 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Completed</span>
+                                    <span>Site Retargeting</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Completed')"><i class="fas fa-edit"></i></button>
@@ -429,11 +429,13 @@
                             <div class="dropdown-value-item">
                                 <div style="display: flex; align-items: center;">
                                     <i class="fas fa-grip-vertical drag-handle"></i>
-                                    <span>Scheduled</span>
+                                    <span>Data Onboarding</span>
                                 </div>
                                 <div style="display: flex; gap: 8px;">
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="editDropdownValue('Scheduled')"><i class="fas fa-edit"></i></button>
                                     <button class="btn btn-secondary btn-sm btn-icon" onclick="deleteDropdownValue('Scheduled')"><i class="fas fa-trash"></i></button>
+                                
+
                                 </div>
                             </div>
                         </div>
