--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                 <div class="flex items-center justify-between p-4 bg-blue-50 border border-blue-200 rounded-lg">
                   <div>
                     <p class="text-sm font-medium text-gray-900">Enable Platform Connectors</p>
-                    <p class="text-xs text-gray-600 mt-1">Toggle to mark selected platforms as Connected</p>
+                    <p class="text-xs text-gray-600 mt-1">Toggle to mark selected platforms as Synced</p>
                   </div>
                   <button type="button" id="connectorsToggle" class="relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" role="switch" aria-checked="false">
                     <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out translate-x-0"></span>
@@ -713,7 +713,7 @@
                         </div>
                       </div>
                       <div class="flex items-center space-x-3">
-                        <span class="connector-status-label text-xs font-medium text-gray-600">Not Connected</span>
+                        <span class="connector-status-label text-xs font-medium text-gray-600">Not Synced</span>
                         <button type="button" class="connector-toggle relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" role="switch" aria-checked="false" data-connector="tradeDesk">
                           <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out translate-x-0"></span>
                         </button>
@@ -748,7 +748,7 @@
                         </div>
                       </div>
                       <div class="flex items-center space-x-3">
-                        <span class="connector-status-label text-xs font-medium text-gray-600">Not Connected</span>
+                        <span class="connector-status-label text-xs font-medium text-gray-600">Not Synced</span>
                         <button type="button" class="connector-toggle relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent bg-gray-200 transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" role="switch" aria-checked="false" data-connector="gcm">
                           <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow ring-0 transition duration-200 ease-in-out translate-x-0"></span>
                         </button>
@@ -2455,7 +2455,7 @@ init: function() {
                   const toggleSwitch = toggle.querySelector('span');
                   
                   if (newState) {
-                    // Set all to Connected
+                    // Set all to Synced
                     toggle.setAttribute('aria-checked', 'true');
                     toggle.classList.remove('bg-gray-200');
                     toggle.classList.add('bg-green-500');
@@ -2464,12 +2464,12 @@ init: function() {
                       toggleSwitch.classList.add('translate-x-5');
                     }
                     if (label) {
-                      label.textContent = 'Connected';
+                      label.textContent = 'Synced';
                       label.classList.remove('text-gray-600');
                       label.classList.add('text-green-700');
                     }
                   } else {
-                    // Set all to Not Connected
+                    // Set all to Not Synced
                     toggle.setAttribute('aria-checked', 'false');
                     toggle.classList.remove('bg-green-500');
                     toggle.classList.add('bg-gray-200');
@@ -2478,7 +2478,7 @@ init: function() {
                       toggleSwitch.classList.add('translate-x-0');
                     }
                     if (label) {
-                      label.textContent = 'Not Connected';
+                      label.textContent = 'Not Synced';
                       label.classList.remove('text-green-700');
                       label.classList.add('text-gray-600');
                     }
@@ -2496,26 +2496,26 @@ init: function() {
                   const toggleSwitch = this.querySelector('span');
                   
                   if (isConnected) {
-                    // Change to Not Connected
+                    // Change to Not Synced
                     this.setAttribute('aria-checked', 'false');
                     this.classList.remove('bg-green-500');
                     this.classList.add('bg-gray-200');
                     toggleSwitch.classList.remove('translate-x-5');
                     toggleSwitch.classList.add('translate-x-0');
                     if (label) {
-                      label.textContent = 'Not Connected';
+                      label.textContent = 'Not Synced';
                       label.classList.remove('text-green-700');
                       label.classList.add('text-gray-600');
                     }
                   } else {
-                    // Change to Connected
+                    // Change to Synced
                     this.setAttribute('aria-checked', 'true');
                     this.classList.remove('bg-gray-200');
                     this.classList.add('bg-green-500');
                     toggleSwitch.classList.remove('translate-x-0');
                     toggleSwitch.classList.add('translate-x-5');
                     if (label) {
-                      label.textContent = 'Connected';
+                      label.textContent = 'Synced';
                       label.classList.remove('text-gray-600');
                       label.classList.add('text-green-700');
                     }
