--- a/WFAdvertiserConnections.html
+++ b/WFAdvertiserConnections.html
@@ -275,6 +275,15 @@
             </a>
           </li>
           <li>
+            <a href="./AdvertiserChangeOrders.html" data-nav-link
+               class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+              <svg class="w-6 h-6 mr-2 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
+              </svg>
+              <span data-link-label>Change Orders</span>
+            </a>
+          </li>
+          <li>
             <a href="./AdvertiserAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
               <img src="./assets/svgs/AdGroups.svg" class="w-6 h-6 mr-2" alt="">
               <span data-link-label>Ad Groups</span>
