--- a/CAD.html
+++ b/CAD.html
@@ -72,7 +72,7 @@
     <header class="border-b border-gray-200 shadow-sm" style="background-color: #004E8B;">
       <div class="flex items-center justify-between px-4 py-2">
         <div class="flex items-center gap-3">
-          <img src="./assets/BeaconLogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
+          <img src="./assets/Beaconlogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
         </div>
 
         <nav class="flex items-center gap-3 ml-auto">
@@ -183,40 +183,42 @@
 
   <ul class="space-y-1 mt-4">
     <li>
-      <!-- Was highlighted; remove highlight classes -->
       <a href="./WFAdvertiserDetails.html" data-nav-link
          class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
-        <img src="./assets/svgs/Details.svg" alt="Details" class="w-6 h-6 mr-2" />
+        <img src="./assets/svgs/Details.svg" alt="Overview" class="w-6 h-6 mr-2" />
         <span data-link-label>Overview</span>
       </a>
     </li>
     <li>
-      <a href="./AdvertiserSalesOrder.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
-        <img src="./assets/svgs/SalesOrderExpense.svg" alt="Sales Orders" class="w-6 h-6 mr-2" />
-        <span data-link-label>Sales Orders</span>
-      </a>
-    </li>
-    <li>
-      <a href="./WFAdvertiserConnections.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
-        <img src="./assets/svgs/Blueprint.svg" alt="Connections" class="w-6 h-6 mr-2" />
-        <span data-link-label>Connections (P2)</span>
-      </a>
-    </li>
-    <li>
-      <a href="./AdvertiserCampaigns.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+      <a href="./AdvertiserCampaigns.html" data-nav-link
+         class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
         <img src="./assets/svgs/CampaignsSchedules.svg" alt="Campaigns" class="w-6 h-6 mr-2" />
         <span data-link-label>Campaigns</span>
       </a>
     </li>
     <li>
-      <a href="./AdvertiserAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
-        <img src="./assets/svgs/AdGroups.svg" class="w-6 h-6 mr-2" alt="">
+      <a href="./AdvertiserAdGroup.html" data-nav-link
+         class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+        <img src="./assets/svgs/AdGroups.svg" alt="Ad Groups" class="w-6 h-6 mr-2" />
         <span data-link-label>Ad Groups</span>
+      </a>
+    </li>
+    <li>
+      <a href="./ChangeOrderList.html" data-nav-link
+         class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+        <img src="./assets/svgs/ChangeOrder.svg" alt="Change Orders" class="w-6 h-6 mr-2" />
+        <span data-link-label>Change Orders</span>
+      </a>
+    </li>
+    <li>
+      <a href="./WFAdvertiserConnections.html" data-nav-link
+         class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+        <img src="./assets/svgs/Blueprint.svg" alt="Connections" class="w-6 h-6 mr-2" />
+        <span data-link-label>Connections</span>
       </a>
     </li>
     <!-- CAD (added) -->
     <li>
-      <!-- Add highlight here -->
       <a href="./CAD.html" data-nav-link
          class="flex items-center px-1 py-2 text-sm text-blue-700 bg-blue-50 font-medium rounded-md">
         <img src="./assets/svgs/Blueprint.svg" class="w-6 h-6 mr-2" alt="CAD">
